k8s/server-deployment.yml
# тип объекта
apiVersion: apps/v1
kind: Deployment
# просто название объекта
metadata:
  name: server-deployment
# описание объекта
spec:
  replicas: 3
  # вбираем описываем в template под
  selector:
    matchLabels:
      component: server
  # описываем шаблон создания пода
  template:
    # вешаем на него лейбл, чтобы деплоймент смог его найти по формуле выше
    metadata:
      labels:
        component: server
    # описание объект пода создаваемый шаблоном
    spec:
      containers:
        - name: server
          image: moon2k/complex-server
          ports:
            - containerPort: 5000
