k8s/ingress-service.yaml
x-common-rules: &common-rules
  paths:
    - path: /?(.*)
      backend:
        serviceName: client-cluster-ip-service
        servicePort: 3000
    - path: /api/?(.*)
      backend:
        serviceName: server-cluster-ip-service
        servicePort: 8000

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-service
  # Настройка
  # https://kubernetes.github.io/ingress-nginx/user-guide/nginx-configuration/annotations/#server-side-https-enforcement-through-redirect
  annotations:
    # говорим что будем использовать nginx
    kubernetes.io/ingress.class: nginx
    # кусок конфига nginx который будет переписывать путь на тот что дала регулярка
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    # если пользователь стучится на http, то редиректить на https
    nginx.ingress.kubernetes.io/ssl-redirect: 'true'
    # cert-manager как то следит за этими анотациями и проводит работу с ними
    # https://cert-manager.io/docs/usage/ingress/
    # информирует объект Ingress о том что мы будем использовать сертификат указанного объекта ClusterIssuer
    cert-manager.io/cluster-issuer: 'letsencrypt-prod'
spec:
  rules:
    # Из каких то побуждений мы начали разделять правила по ключу host, послде добавления tls,
    # хотя до этого все прекрасно работало и с единым конфигом
    # PS: мы добавили добавили якорь, чтобы не дублировать код, но могли и через аннотации сделать редирект с одного
    # хоста на другой
    - host: moon2k.ru
      http: *common-rules
    - host: www.moon2k.ru
      http: *common-rules
  # Это настройка Ingress объекта, указывающая для каких доменов и из какого Secret брать сертификат
  tls:
    - hosts:
        - moon2k.ru
        - www.moon2k.ru
      secretName: moon2k-ru
